# ae_star_wars_searcher

./: .gitignore  .releaserc.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.circleci/: config.yml
src/searcher/: entity.py  handler.py
test/entity/: test_character.py  test_response.py
test/handler/: test_searcher.py
