[tool.poetry]
name = "ae_star_wars_searcher"
version = "0.1.0"
description = "Star Wars Searcher API"
authors = ["ae-lexs <brian.alexis.nava.arreola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
